--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "sqlite3": "^5.0.0",
     "typeorm": "^0.2.29",
     "uuidv4": "^6.2.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
+    "@types/multer": "^1.4.4",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
     "eslint": "6.8.0",
